; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_window.c_glfwSetWindowOpacity.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_window.c_glfwSetWindowOpacity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_INVALID_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Invalid window opacity %f\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwSetWindowOpacity(i32* %0, float %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca float, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store float %1, float* %4, align 4
  %6 = load i32*, i32** %3, align 8
  store i32* %6, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load float, float* %4, align 4
  %12 = load float, float* %4, align 4
  %13 = fcmp oeq float %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load float, float* %4, align 4
  %17 = fcmp oge float %16, 0.000000e+00
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = load float, float* %4, align 4
  %21 = fcmp ole float %20, 1.000000e+00
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = call i32 (...) @_GLFW_REQUIRE_INIT()
  %25 = load float, float* %4, align 4
  %26 = load float, float* %4, align 4
  %27 = fcmp une float %25, %26
  br i1 %27, label %34, label %28

28:                                               ; preds = %2
  %29 = load float, float* %4, align 4
  %30 = fcmp olt float %29, 0.000000e+00
  br i1 %30, label %34, label %31

31:                                               ; preds = %28
  %32 = load float, float* %4, align 4
  %33 = fcmp ogt float %32, 1.000000e+00
  br i1 %33, label %34, label %38

34:                                               ; preds = %31, %28, %2
  %35 = load i32, i32* @GLFW_INVALID_VALUE, align 4
  %36 = load float, float* %4, align 4
  %37 = call i32 @_glfwInputError(i32 %35, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), float %36)
  br label %42

38:                                               ; preds = %31
  %39 = load i32*, i32** %5, align 8
  %40 = load float, float* %4, align 4
  %41 = call i32 @_glfwPlatformSetWindowOpacity(i32* %39, float %40)
  br label %42

42:                                               ; preds = %38, %34
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @_GLFW_REQUIRE_INIT(...) #1

declare dso_local i32 @_glfwInputError(i32, i8*, float) #1

declare dso_local i32 @_glfwPlatformSetWindowOpacity(i32*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
